opam-version: "2.0"
version: "0.4.0"
synopsis: "REST API for Stripe"
maintainer: ["Diskuv, Inc. <opensource+dkml@support.diskuv.com>"]
authors: ["Diskuv, Inc. <opensource+dkml@support.diskuv.com>"]
# Apache 2.0 for generated code and OSL 3.0 for dk/dk.cmd and __dk.cmake.
license: "Apache-2.0 AND OSL-3.0"
homepage: "https://diskuv.com/dksdk/coder/2024-intro-scripting/"
bug-reports: "https://github.com/diskuv/dkcoder/issues"
depends: [
  "dune" {>= "3.0"}
  "ocaml" {>= "4.14"}
  "ezjsonm" {>= "1.3.0"}
  "json-data-encoding" {>= "1.0.1"}
  "ptime" {>= "1.1.0"}
  "routes" {>= "2.0.0"}
  "uri" {>= "4.4.0"}
  "tiny_httpd" {>= "0.16" & with-dev-setup}
  "cohttp-curl-lwt" {>= "6.0.0~beta2" & with-dev-setup}
  "utop" {>= "2.14.0" & with-dev-setup}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
