(library
 (name DkStdRestApis_NotStripe)
 (public_name DkStdRestApis_NotStripe)
 (modules (:standard \ open__ Curl2 CurlCmd))
 (libraries ezjsonm json-data-encoding ptime routes))

(library
 (name DkStdRestApis_NotStripe_X)
 (public_name DkStdRestApis_NotStripe.X)
 (modules Curl2 CurlCmd)
 (libraries DkStdRestApis_NotStripe cohttp-curl-lwt http lwt))
