(library
 (name DkStdRestApis_NotStripe)
 (public_name DkStdRestApis_NotStripe)
 (modules (:standard \ open__ Curl2 CurlCmd ServerTiny))
 (ocamlopt_flags (:standard -verbose -compact -inline 0 -linscan -match-context-rows 8))
 (libraries ezjsonm json-data-encoding ptime routes))

(library
 (name DkStdRestApis_NotStripe_C)
 (public_name DkStdRestApis_NotStripe.Clients)
 (modules Curl2 CurlCmd)
 (libraries DkStdRestApis_NotStripe cohttp-curl-lwt http lwt))

(executable
 (name ServerTiny)
 (public_name stripe-tiny-server)
 (modules ServerTiny)
 (libraries DkStdRestApis_NotStripe tiny_httpd))
