; Compile the scripts for Dune users and to aid development in an IDE.
; DkCoder does not need this file!

(library
 ; ... Simulate DkCoder [open__.ml] file in regular ocaml
 (name notstripe_curl_o)
 (public_name DkStdRestApis_NotStripe.Curl.O)
 (modules open__)
 (libraries
  Tr1Http_Std
  Tr1Stdlib_V414Base
  Tr1Stdlib_V414CRuntime
  Tr1Stdlib_V414Io))

(library
 (name DkStdRestApis_NotStripe_C)
 (public_name DkStdRestApis_NotStripe.Curl)
 (modules Curl2 CurlCmd)
 (libraries
  notstripe_curl_o
  DkStdRestApis_NotStripe
  cohttp-curl-lwt
  http
  lwt)
 (flags
  (:standard
   ; @32: error on unused-value-declaration
   ; @70: error on missing-mli
   ; -warn-error
   ; @32@70
   ; ---- START
   ; ---- Same flags as [DuneStanzas.add_executable] so that errors appear during DkCoder
   ; ---- compile. Not on the end-user's machine!
   ;
   ; .... Flag the uses of Stdlib with alerts
   -open
   Stdlib414Shadow
   ; ... Simulate DkCoder [open__.ml] file in regular ocaml
   -open
   Notstripe_curl_o.Open__
   ; .... need_dkcoder_stdlib: Turn the above uses of Stdlib into fatal alerts.
   -alert
   @need_dkcoder_stdlib)))
